--- a/Proyecto-Final/web.css
+++ b/Proyecto-Final/web.css
@@ -1,7 +1,9 @@
 html,body{
     width:100%;
+    height:100%;
     padding:0;
     margin:0;
+    background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
 }
 
 nav{
@@ -25,12 +27,13 @@ nav img{
     height: auto;
 }
 
-nav ul li a {
+nav ul li a, footer a {
     color: #090000;
     text-decoration: none;
     padding: 0 10px;
 }
-nav ul li a:hover {
+nav ul li a:hover,
+footer a:hover {
     text-decoration: underline;
 }
 
@@ -42,10 +45,14 @@ main{
 
 .intro{
     width: 33%;
-    border: 1px solid black;   
+    border: 1px;   
+    border-radius: 25px;
     margin-top: 5%;
     margin-bottom: 5%;
     text-align: center;
+    background: rgb(7,7,7);
+    background: linear-gradient(90deg, rgba(7,7,7,1) 44%, rgba(22,22,22,1) 100%);
+    color: white;
 }
 
 .opciones{
@@ -54,15 +61,70 @@ main{
     justify-content: space-around;
 }
 
+div a{
+    border: 1px;
+    padding:10px;
+    border-radius:5px;
+    text-decoration: none;
+    background-image: linear-gradient( 109.6deg,  rgba(245,56,56,1) 11.2%, rgba(234,192,117,1) 78% );
+    color: white;
+}
+
+div a:hover {
+    background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
+}
+
 #importancia{
     padding: 2.5%;
     text-align: center;
 }
 
-.calculadora h2{
+h2{
     text-align: center;
 }
 
-div p, form, ol{
-    width: 30%;
+.calculadora{
+    display: grid;
+    grid-template-columns: 250px 250px 250px;
+    grid-template-rows: auto;
+    justify-content: space-around;
+    margin:70px;
+    border-top: 3px solid grey;
+    padding:20px;
+}
+
+.calculadora div{
+    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+    text-align: center;
+    color: aliceblue;  
+    align-content: center;
+    border-radius: 5px;
+}
+
+#Ahorros,
+#presupuesto,
+#eva,
+#roiCalculator{
+    background-color: black;
+    border-top: 10px solid green;
+    border-bottom: 2px solid green;
+}
+
+form button{
+    background-color:green;
+    border-radius: 20px;
+}
+
+#resultado1,
+#resultadoPresupuesto,
+#resultadoROI,
+#resultadoEVA{
+    text-align: center;
+    padding-top:40px;
+    font-size: 30px;
+}
+
+footer{
+    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+    text-align: center;    
 }
