--- a/Proyecto-Final/web.css
+++ b/Proyecto-Final/web.css
@@ -1,14 +1,16 @@
 html,body{
-    width:100%;
-    height:100%;
     padding:0;
     margin:0;
     background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+    font-family: Arial, sans-serif;
+    min-height: 100vh;
 }
 
 nav{
     display:flex;
     flex-direction: row;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    align-items: center;
 }
 
 #logotipo{
@@ -19,7 +21,18 @@ nav{
 nav ul{
     text-align: center;
     display: flex;
-    justify-content: flex-end; /* Alineación de derecha a izquierda */
+    flex-direction: column; /* Cambio a disposición vertical */
+    align-items: flex-end; /* Alineación vertical a la derecha */
+    max-height: 100vh; /* Altura máxima de la pantalla */
+    overflow-y: auto; /* Barra de desplazamiento vertical si es necesario */
+}
+
+@media screen and (min-width: 768px) {
+    nav ul {
+        flex-direction: row; /* Cambio a disposición horizontal */
+        max-height: none; /* Elimina la altura máxima */
+        overflow-y: visible; /* Desactiva la barra de desplazamiento vertical */
+    }
 }
 
 nav img{
@@ -27,13 +40,14 @@ nav img{
     height: auto;
 }
 
-nav ul li a, footer a {
+nav ul li a, footer a, nav a {
     color: #090000;
     text-decoration: none;
     padding: 0 10px;
 }
 nav ul li a:hover,
-footer a:hover {
+footer a:hover,
+nav a:hover {
     text-decoration: underline;
 }
 
@@ -41,13 +55,13 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    min-height: 80vh;
 }
 
 .intro{
-    width: 33%;
     border: 1px;   
     border-radius: 25px;
-    margin-top: 5%;
     margin-bottom: 5%;
     text-align: center;
     background: rgb(7,7,7);
@@ -84,13 +98,10 @@ h2{
 }
 
 .calculadora{
-    display: grid;
-    grid-template-columns: 250px 250px 250px;
-    grid-template-rows: auto;
-    justify-content: space-around;
-    margin:70px;
-    border-top: 3px solid grey;
-    padding:20px;
+    flex-direction: column; /* Cambio a disposición vertical */
+    align-items: flex-end; /* Alineación vertical a la derecha */
+    max-height: 100vh; /* Altura máxima de la pantalla */
+    overflow-y: auto; /* Barra de desplazamiento vertical si es necesario */
 }
 
 .calculadora div{
@@ -99,6 +110,7 @@ h2{
     color: aliceblue;  
     align-content: center;
     border-radius: 5px;
+    margin: 20px;
 }
 
 #Ahorros,
